// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with array styles 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontSize": 16,
      },
      Object {
        "color": "#abc",
      },
      Object {
        "backgroundColor": "#def",
      },
    ]
  }
/>
`;

exports[`should match snapshot without styles 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontSize": 16,
      },
      undefined,
    ]
  }
/>
`;
